--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ MarkupSafe==2.1.1
 matplotlib==3.5.3
 numpy==1.23.2
 openpyxl==3.0.10
+protobuf==3.19.0
 packaging==21.3
 pandas==1.4.3
 Pillow==9.2.0
