--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-joblib==0.14.1
-streamlit==1.7.0
-scikit-learn==0.23.1
-pandas==1.0.5
-numpy
+pip install joblib==0.14.1
+pip install streamlit==1.7.0
+pip install scikit-learn==0.23.1
+pip install pandas==1.0.5
+pip install numpy
 
